<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    tools:context=".LoginActivity"
    android:orientation="vertical">


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="280dp"
        android:background="@drawable/rounded_corners" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@mipmap/login_bg"
        android:scaleType="fitXY" />

    <TextView
        android:layout_width="130dp"
        android:layout_height="27.56dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="277dp"
        android:layout_height="63dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/app_introduce"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="311dp"
        android:layout_height="64dp"
        android:layout_marginTop="180dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login"
        android:background="@drawable/sign_up"/>

    <TextView
        android:layout_width="85dp"
        android:layout_height="43dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="355dp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="28sp" />

    <TextView
        android:layout_width="170dp"
        android:layout_height="21dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="403dp"
        android:gravity="center"
        android:textColor="#777777"
        android:text="@string/welcome"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/login_account"
        android:layout_width="311dp"
        android:layout_height="64dp"
        android:hint="@string/account"
        android:textColorHint="#777777"
        android:background="@drawable/login_input"
        android:textColor="@color/black"
        android:layout_marginTop="457dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:paddingStart="24dp"
        android:inputType="text"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="311dp"
        android:layout_height="64dp"
        android:textColor="@color/black"
        android:hint="@string/password"
        android:textColorHint="#777777"
        android:background="@drawable/login_input"
        android:layout_marginTop="542dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:paddingStart="24dp"
        android:inputType="textPassword" />

    <Button
        android:layout_width="311dp"
        android:layout_height="56dp"
        android:layout_marginTop="632dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/sign_up"
        android:background="@drawable/login"/>





</RelativeLayout>